--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="icon">
                         <img class="full-size" src="images/aghp.png">
                     </div>
-                    <h6 class="text link-text">Alex Geer<br>House Portraits</h6>
+                    <h6 class="text link-text">House<br>Portraits</h6>
                 </a>
             </div>
 
