--- a/index.html
+++ b/index.html
@@ -7,277 +7,268 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script defer src="scripts.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Home Page</title>
 </head>
 
 <body>
-    <section class="seccion-principal">
+  <section class="container">
+    <button class="main-link" id="news">
+        News
+    </button>
 
-        <!-- ############################################################################ -->
-        <!-- #########  LEFT SIDE  ######### -->
-        <div class="side side-left">
+    <button class="main-link" id="email">
+        Email and Social Media
+    </button>
 
-            <!-- #########   ROW   ######### -->
-            <div class="row-main fw">
+    <button class="main-link" id="sites">
+        My Sites and Repos
+    </button>
 
-                <a class="tile" href="https://www.nytimes.com/">
-                    <div class="icon">
-                        <img class="full-size" src="images/nyt2.png">
-                    </div>
-                </a>
+    <button class="main-link" id="course">
+        Courses
+    </button>
 
-                <a class="tile" href="http://theatlantic.com/">
-                    <div class="icon">
-                        <img class="full-size" src="images/atlantic.png">
-                    </div>
-                </a>
+    <button class="main-link" id="ed-link">
+        Course Resources
+    </button>
 
-                <a class="tile" href="https://www.fip.fr/">
-                    <div class="icon">
-                        <img class="full-size" src="images/fip.png">
-                    </div>
-                </a>
-
-                <a class="tile" href="https://www.npr.org/">
-                    <div class="icon">
-                        <img class="full-size" src="images/npr.png">
-                    </div>
-                </a>
-
-                <a class="tile" href="https://www.mpr.org/">
-                    <div class="icon">
-                        <img class="full-size" src="images/mpr.png">
-                    </div>
-                </a>
-
-            </div>
-
-            <!-- #########   ROW   ######### -->
-            <div class="row-main fw">
-
-                <a class="tile" href="https://github.com/">
-                    <div class="icon">
-                        <img class="half-size" src="images/github-icon.png">
-                    </div>
-                    <h6 class="text link-text">My<br>GitHub</h6>
-                </a>
-
-                <a class="tile" href="https://bitbucket.org">
-                    <div class="icon">
-                        <img class="half-size" src="images/bitbucket.png">
-                    </div>
-                    <h6 class="text link-text">My<br>Bitbucket</h6>
-                </a>
-
-                <a class="tile" href="https://hpanel.hostinger.com/">
-                    <div class="icon">
-                        <img class="full-size" src="images/hostinger.png">
-                    </div>
-                </a>
-
-                <a class="tile" href="https://webmail1.hostinger.com/?_task=mail&_mbox=INBOX">
-                    <div class="icon">
-                        <img class="half-size" src="images/hostingerWebmail.png">
-                    </div>
-                    <h6 class="text link-text">Hostinger<br>Webmail</h6>
-                </a>
-
-                <a class="tile" href="https://alexgeerart.com/">
-                    <div class="icon">
-                        <img class="full-size" src="images/aghp.png">
-                    </div>
-                    <h6 class="text link-text">House<br>Portraits</h6>
-                </a>
-            </div>
-
-            <!-- #########   ROW   ######### -->
-            <div class="row-main fw">
-
-                <a class="tile" href="https://www.facebook.com/">
-                    <div class="icon">
-                        <img class="half-size" src="images/facebook.png">
-                    </div>
-                    <h6 class="text link-text">facebook<br>home</h6>
-                </a>
-
-                <a class="tile" href="https://outlook.live.com/mail/0/inbox">
-                    <div class="icon">
-                        <img class="half-size" src="images/hotmail.png">
-                    </div>
-                    <h6 class="text link-text">outlook<br>hotmail</h6>
-                </a>
-
-                <a class="tile" href="https://mail.google.com/mail/u/0/#inbox">
-                    <div class="icon">
-                        <img class="half-size" src="images/gmail.png">
-                    </div>
-                    <h6 class="text link-text">alex<br>george geer</h6>
-                </a>
-
-                <a class="tile" href="https://mail.google.com/mail/u/1/#inbox">
-                    <div class="icon">
-                        <img class="half-size" src="images/gmail.png">
-                    </div>
-                    <h6 class="text link-text">alex geer<br>artist</h6>
-                </a>
-
-            </div>
-
-        </div><!-- END OF LEFT SIDE -->
+    <button class="main-link" id="wd-link">
+        webDev Resources
+    </button>
+  </section>
 
 
-        <!-- ############################################################################ -->
-        <!-- #########  RIGHT SIDE  ######### -->
-        <div class="side side-right">
+  <!-- MODAL SECTION: -->
 
+  <section class="modal">
 
-            <!-- #########   ROW   ######### -->
-            <div class="row-main fw">
-
-                <a class="tile" href="https://www.udemy.com/">
-                    <div class="icon">
-                        <img class="half-size" src="images/udemy.webp">
-                    </div>
-                    <h6 class="text link-text">My<br>Udemy</h6>
-                </a>
-
-                <a class="tile" href="https://www.appbrewery.co/p/web-development-course-resources/">
-                    <div class="icon">
-                        <img class="full-size" id="appB" src="images/appBrewery.png">
-                    </div>
-                    <!-- <h6 class="text link-text">The App<br>Brewery</h6> -->
-                </a>
-
-                <a class="tile" href="http://codingheroes.io/resources/">
-                    <div class="icon">
-                        <img class="half-size" id="jonasRsrc" src="images/jonasRsrc.png">
-                    </div>
-                    <h6 class="text link-text">jonas<br>Resources</h6>
-                </a>
-
-                <a class="tile" href="https://github.com/jonasschmedtmann/complete-javascript-course">
-                    <div class="icon">
-                        <img class="half-size" id="" src="images/github-folder.png">
-                    </div>
-                    <h6 class="text link-text">jonasJs<br>Materials</h6>
-                </a>
-
-                <a class="tile" href="https://github.com/jonasschmedtmann/advanced-css-course">
-                    <div class="icon">
-                        <img class="half-size" id="" src="images/github-folder.png">
-                    </div>
-                    <h6 class="text link-text">jonasCSS<br>Materials</h6>
-                </a>
-
-            </div>
-
-
-            <!-- #########   ROW   ######### -->
-            <div class="row-main fw">
-
-                <a class="tile" href="https://javascript.info/">
-                    <div class="icon">
-                        <img class="half-size" src="images/jsInfo.png">
-                    </div>
-                </a>
-
-                <a class="tile" href="https://www.freecodecamp.org/">
-                    <div class="icon">
-                        <img class="half-size" src="images/freecodecamp.png">
-                    </div>
-                    <h6 class="text link-text">Free-<br>CodeCamp</h6>
-                </a>
-
-                <a class="tile" href="https://developer.mozilla.org/en-US/">
-                    <div class="icon">
-                        <img class="half-size" src="images/mdn.png">
-                    </div>
-                    <h6 class="text link-text">Mozilla<br>devNet</h6>
-                </a>
-
-                <a class="tile" href="https://www.w3schools.com/">
-                    <div class="icon">
-                        <img class="full-size" src="images/w3s.png">
-                    </div>
-                </a>
-
-
-            </div>
-
-            <!-- #########   ROW   ######### -->
-            <div class="row-main fw">
-
-                <a class="tile" href="https://jquery.com/">
-                    <div class="icon">
-                        <img class="half-size" src="images/jquery.jpg">
-                    </div>
-                    <h6 class="text link-text">jQuery</h6>
-                </a>
-
-                <a class="tile" href="https://nodejs.org/en/">
-                    <div class="icon">
-                        <img class="half-size" src="images/nodeJs.png">
-                    </div>
-                    <h6 class="text link-text">nodeJS</h6>
-                </a>
-
-                <a class="tile" href="https://www.npmjs.com/">
-                    <div class="icon">
-                        <img class="full-size" src="images/npm.png">
-                    </div>
-                </a>
-
-                <a class="tile" href="https://expressjs.com/">
-                    <div class="icon">
-                        <img class="half-size" src="images/ex.png">
-                    </div>
-                    <h6 class="text link-text">expressJS</h6>
-                </a>
-
-
-                <a class="tile" href="https://nodemon.io/">
-                    <div class="icon">
-                        <img class="half-size" src="images/nodemon.png">
-                    </div>
-                    <h6 class="text link-text">Nodemon</h6>
-                </a>
-
-
-            </div>
-
-            <!-- #########   ROW   ######### -->
-            <div class="row-main fw">
-
-                <a class="tile" href="https://getbootstrap.com/">
-                    <div class="icon">
-                        <img class="half-size" src="images/bootstrap.png">
-                    </div>
-                    <h6 class="text link-text">Bootstrap</h6>
-                </a>
-
-                <a class="tile" href="https://css-tricks.com/">
-                    <div class="icon">
-                        <img class="half-size" src="images/css-tricks.webp">
-                    </div>
-                    <h6 class="text link-text">CSS-Tricks</h6>
-                </a>
-
-
-                <a class="tile" href="https://colorhunt.co/">
-                    <div class="icon">
-                        <img class="half-size" src="images/colorhunt.png">
-                    </div>
-                    <h6 class="text link-text">colorhunt.co</h6>
-                </a>
-
-            </div>
-
-            <!-- END OF .side-right -->
+      <!--  NEWS LINKS  -->
+      <a class="tile news" href="https://www.nytimes.com/">
+        <div class="icon">
+          <img class="full-size" src="images/nyt2.png">
         </div>
+      </a>
+
+      <a class="tile news" href="http://theatlantic.com/">
+        <div class="icon">
+          <img class="full-size" src="images/atlantic.png">
+        </div>
+      </a>
+
+      <a class="tile news" href="https://www.fip.fr/">
+        <div class="icon">
+          <img class="full-size" src="images/fip.png">
+        </div>
+      </a>
+
+      <a class="tile news" href="https://www.npr.org/">
+        <div class="icon">
+          <img class="full-size" src="images/npr.png">
+        </div>
+      </a>
+
+      <a class="tile news" href="https://www.mpr.org/">
+        <div class="icon">
+          <img class="full-size" src="images/mpr.png">
+        </div>
+      </a>
+
+      <!-- EMAIL AND STUFF -->
+
+      <a class="tile email" href="https://www.facebook.com/">
+        <div class="icon">
+          <img class="half-size" src="images/facebook.png">
+        </div>
+        <h6 class="text link-text">facebook<br>home</h6>
+      </a>
+
+      <a class="tile email" href="https://outlook.live.com/mail/0/inbox">
+        <div class="icon">
+          <img class="half-size" src="images/hotmail.png">
+        </div>
+        <h6 class="text link-text">outlook<br>hotmail</h6>
+      </a>
+
+      <a class="tile email" href="https://mail.google.com/mail/u/0/#inbox">
+        <div class="icon">
+          <img class="half-size" src="images/gmail.png">
+        </div>
+        <h6 class="text link-text">alex<br>george geer</h6>
+      </a>
+
+      <a class="tile email" href="https://mail.google.com/mail/u/1/#inbox">
+        <div class="icon">
+          <img class="half-size" src="images/gmail.png">
+        </div>
+        <h6 class="text link-text">alex geer<br>artist</h6>
+      </a>
+
+      <a class="tile email" href="https://webmail1.hostinger.com/?_task=mail&_mbox=INBOX">
+        <div class="icon">
+          <img class="half-size" src="images/hostingerWebmail.png">
+        </div>
+        <h6 class="text link-text">Hostinger<br>Webmail</h6>
+      </a>
+
+      <!-- MY SITES AND REPOS -->
+
+      <a class="tile sites" href="https://github.com/">
+        <div class="icon">
+          <img class="half-size" src="images/github-icon.png">
+        </div>
+        <h6 class="text link-text">My<br>GitHub</h6>
+      </a>
+
+      <a class="tile sites" href="https://bitbucket.org">
+        <div class="icon">
+          <img class="half-size" src="images/bitbucket.png">
+        </div>
+        <h6 class="text link-text">My<br>Bitbucket</h6>
+      </a>
+
+      <a class="tile sites" href="https://hpanel.hostinger.com/">
+        <div class="icon">
+          <img class="full-size" src="images/hostinger.png">
+        </div>
+      </a>
+
+      <a class="tile sites" href="https://alexgeerart.com/">
+        <div class="icon">
+          <img class="full-size" src="images/aghp.png">
+        </div>
+        <h6 class="text link-text">House Portraits</h6>
+      </a>
+
+      <!-- COURSES -->
+
+      <a class="tile course" href="https://www.udemy.com/">
+        <div class="icon">
+          <img class="full-size" src="images/udemy.webp">
+        </div>
+      </a>
+
+      <a class="tile course" href="https://www.coursera.org/">
+        <div class="icon">
+          <img class="full-size" src="images/coursera.png">
+        </div>
+      </a>
+
+      <a class="tile course" href="https://www.freecodecamp.org/">
+        <div class="icon">
+          <img class="half-size" src="images/freecodecamp.png">
+        </div>
+        <h6 class="text link-text">Free-<br>CodeCamp</h6>
+      </a>
+
+      <a class="tile course" href="https://courses.wesbos.com/account/access/61a48111ff179c0e3cdbd280">
+        <h6 class="text link-text">Wes Bos</h6>
+        <h6 class="text link-text">JS-30</h6>
+      </a>
+
+      <!-- COURSE RESOURCES -->
+
+      <a class="tile ed-link" href="https://www.appbrewery.co/p/web-development-course-resources/">
+        <div class="icon">
+          <img class="full-size" id="appB" src="images/appBrewery.png">
+        </div>
+        <!-- <h6 class="text link-text">The App<br>Brewery</h6> -->
+      </a>
+
+      <a class="tile ed-link" href="http://codingheroes.io/resources/">
+        <div class="icon">
+          <img class="half-size" id="jonasRsrc" src="images/jonasRsrc.png">
+        </div>
+        <h6 class="text link-text">jonas<br>Resources</h6>
+      </a>
+
+      <a class="tile ed-link" href="https://github.com/jonasschmedtmann/complete-javascript-course">
+        <div class="icon">
+          <img class="half-size" id="" src="images/github-folder.png">
+        </div>
+        <h6 class="text link-text">jonasJs<br>Materials</h6>
+      </a>
+
+      <a class="tile ed-link" href="https://github.com/jonasschmedtmann/advanced-css-course">
+        <div class="icon">
+          <img class="half-size" id="" src="images/github-folder.png">
+        </div>
+        <h6 class="text link-text">jonasCSS<br>Materials</h6>
+      </a>
+
+      <!-- webDev Resources -->
+
+      <a class="tile wd-link" href="https://javascript.info/">
+        <div class="icon">
+          <img class="half-size" src="images/jsInfo.png">
+        </div>
+      </a>
+
+      <a class="tile wd-link" href="https://developer.mozilla.org/en-US/">
+        <div class="icon">
+          <img class="half-size" src="images/mdn.png">
+        </div>
+        <h6 class="text link-text">Mozilla<br>devNet</h6>
+      </a>
+
+      <a class="tile wd-link" href="https://www.w3schools.com/">
+        <div class="icon">
+          <img class="full-size" src="images/w3s.png">
+        </div>
+      </a>
+
+      <a class="tile wd-link" href="https://jquery.com/">
+        <div class="icon">
+          <img class="half-size" src="images/jquery.jpg">
+        </div>
+        <h6 class="text link-text">jQuery</h6>
+      </a>
+
+      <a class="tile wd-link" href="https://nodejs.org/en/">
+        <div class="icon">
+          <img class="half-size" src="images/nodeJs.png">
+        </div>
+        <h6 class="text link-text">nodeJS</h6>
+      </a>
+
+      <a class="tile wd-link" href="https://www.npmjs.com/">
+        <div class="icon">
+          <img class="full-size" src="images/npm.png">
+        </div>
+      </a>
+
+      <a class="tile wd-link" href="https://expressjs.com/">
+        <div class="icon">
+          <img class="half-size" src="images/ex.png">
+        </div>
+        <h6 class
+    <!-- </div> -->="text link-text">expressJS</h6>
+      </a>
+
+      <a class="tile wd-link" href="https://getbootstrap.com/">
+        <div class="icon">
+          <img class="half-size" src="images/bootstrap.png">
+        </div>
+        <h6 class="text link-text">Bootstrap</h6>
+      </a>
+
+      <a class="tile wd-link" href="https://css-tricks.com/">
+        <div class="icon">
+          <img class="half-size" src="images/css-tricks.webp">
+        </div>
+        <h6 class="text link-text">CSS-Tricks</h6>
+      </a>
 
 
-    </section>
+      <a class="tile wd-link" href="https://colorhunt.co/">
+        <div class="icon">
+          <img class="half-size" src="images/colorhunt.png">
+        </div>
+        <h6 class="text link-text">colorhunt.co</h6>
+      </a>
+
+  </section>
+
 </body>
 
 </html>
